--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^5.16.7",
+    "aos": "^3.0.0-beta.6",
     "axios": "^1.7.4",
     "firebase": "^10.13.0",
     "localforage": "^1.10.0",
